Apply suggestions from code review
Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>

--- a/charts/watch/Chart.yaml
+++ b/charts/watch/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: watch
-description: Workload Analytics and Telemetry for Comprehensive Health - Observability stack for PATH API service
+description: Workload Analytics and Telemetry for Comprehensive Health (WATCH) - Observability stack for PATH and GUARD
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
