Apply suggestions from code review
Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>

--- a/charts/guard/templates/auth-pads.yaml
+++ b/charts/guard/templates/auth-pads.yaml
@@ -36,10 +36,10 @@ spec:
         ports:
         - containerPort: {{ .Values.pads.port }}
         volumeMounts:
-          - name: pads-data-volume
-            mountPath: /app/data
+          - name: {{$name}}-data
+            mountPath: {{ .Values.pads.mountPath }}
       volumes:
-      - name: pads-data-volume
+      - name: {{$name}}-data
         configMap:
           name: pads-data
 ---
