--- a/charts/guard/Chart.yaml
+++ b/charts/guard/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: guard
-description: A Helm chart for deploying GUARD (Gateway Utilities for Authentication, Routing & Defense) in production or development environments
+description: A Helm chart for development and production deployments of GUARD (Gateway Utilities for Authentication, Routing & Defense)
 version: 0.1.1
 appVersion: "1.0"
 dependencies:
