--- a/charts/guard/templates/httproute-header.yaml
+++ b/charts/guard/templates/httproute-header.yaml
@@ -3,25 +3,32 @@
 # Generates HTTPRoute resources for each service in the `services` list, configuring routing
 # based on the subdomain of the request.
 #
+# Ref: https://gateway.envoyproxy.io/latest/api/gateway_api/httproute/
+#
 # Routing behavior:
 #   - Creates an HTTPRoute for each authoritative service ID
 #   - Creates additional HTTPRoutes for each service alias
 #   - Routes requests based on the `target-service-id` header
 #
-# Example configuration:
+# Example configuration, as defined in `values.yaml` at `guard.services`:
 # services:
 #   - serviceId: F00C
 #     aliases:
 #       - eth
+#       - eth-mainnet
 #   - serviceId: F021
 #     aliases:
 #       - polygon
 #
 # This configuration would match requests to:
-#   -H "target-service-id: F00C" -> "target-service-id: F00C"
-#   -H "target-service-id: eth" -> "target-service-id: F00C"
-#   -H "target-service-id: F021" -> "target-service-id: F021"
-#   -H "target-service-id: polygon" -> "target-service-id: F021"
+#   - https://rpc.path.com/v1
+# For any of the following headers:
+#   -H "target-service-id: F00C"        -> "target-service-id: F00C"
+#   -H "target-service-id: eth"         -> "target-service-id: F00C"
+#   -H "target-service-id: eth-mainnet" -> "target-service-id: F00C"
+#
+#   -H "target-service-id: F021"        -> "target-service-id: F021"
+#   -H "target-service-id: polygon"     -> "target-service-id: F021"
 #
 # In the case of a match based on an alias, the header
 # will be set to the authoritative service ID.
