--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -7,15 +7,9 @@ version: 0.1.10
 dependencies:
   - name: guard
     version: 0.1.1
-    # repository: https://buildwithgrove.github.io/helm-charts/
-    # TODO_IN_THIS_PR(@commoddity): Remove this dependency and return to using
-    # the repository from the buildwithgrove organization.
-    repository: file://../guard
+    repository: https://buildwithgrove.github.io/helm-charts/
   - name: watch
     version: 0.1.0
-    # repository: https://buildwithgrove.github.io/helm-charts/
-    # TODO_IN_THIS_PR(@commoddity): Remove this dependency and return to using
-    # the repository from the buildwithgrove organization.
-    repository: file://../watch
+    repository: https://buildwithgrove.github.io/helm-charts/
     namespace: monitoring
     condition: observability.enabled
