fix: remove gateway.enabled field from guard values.yaml

--- a/charts/guard/templates/auth-api-key/api-keys-secret.yaml
+++ b/charts/guard/templates/auth-api-key/api-keys-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.services .Values.gateway.enabled .Values.auth.apiKey.enabled }}
+{{- if and .Values.services .Values.auth.apiKey.enabled }}
 {{- $apiKeyConfig:= .Values.auth.apiKey }}
 
 # This secret is used to store a full list of API keys for the PATH service.
