[GUARD] Make GUARD a dependency of PATH Helm chart (#26)
* feat: make GUARD run as dependency of PATH chart

* fix: remove need for values.yaml in local PATH

* fix: remove need for values.yaml override in PATH for guard helm char values.yaml

* fix: run GUARD as PATH dependency

* Use WATCH chart in PATH chart

* Review all the docs

* Update TOC

* Apply suggestions from code review

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>

* fix: implement review comments

* Apply suggestions from code review

Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>

* Address review comments

* Address review comments

* Address review comments

* Address review comments

* Update charts/path/Chart.yaml

Co-authored-by: commoddity <47662958+commoddity@users.noreply.github.com>

* chore: delete path-chart-docs.md

---------

Co-authored-by: Arash Deshmeh <adshmh@gmail.com>
Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>
Co-authored-by: Arash <23505281+adshmh@users.noreply.github.com>

--- a/charts/guard/templates/httproute-header.yaml
+++ b/charts/guard/templates/httproute-header.yaml
@@ -3,27 +3,34 @@
 # Generates HTTPRoute resources for each service in the `services` list, configuring routing
 # based on the subdomain of the request.
 #
+# Ref: https://gateway.envoyproxy.io/latest/api/gateway_api/httproute/
+#
 # Routing behavior:
 #   - Creates an HTTPRoute for each authoritative service ID
 #   - Creates additional HTTPRoutes for each service alias
 #   - Routes requests based on the `target-service-id` header
 #
-# Example configuration:
+# Example configuration, as defined in `values.yaml` at `guard.services`:
 # services:
 #   - serviceId: F00C
 #     aliases:
 #       - eth
+#       - eth-mainnet
 #   - serviceId: F021
 #     aliases:
 #       - polygon
 #
 # This configuration would match requests to:
-#   -H "target-service-id: F00C" -> "target-service-id: F00C"
-#   -H "target-service-id: eth" -> "target-service-id: F00C"
-#   -H "target-service-id: F021" -> "target-service-id: F021"
-#   -H "target-service-id: polygon" -> "target-service-id: F021"
+#   - https://rpc.path.com/v1
+# For any of the following headers:
+#   -H "target-service-id: F00C"        -> "target-service-id: F00C"
+#   -H "target-service-id: eth"         -> "target-service-id: F00C"
+#   -H "target-service-id: eth-mainnet" -> "target-service-id: F00C"
 #
-# In the case of a match based on an alias, the header 
+#   -H "target-service-id: F021"        -> "target-service-id: F021"
+#   -H "target-service-id: polygon"     -> "target-service-id: F021"
+#
+# In the case of a match based on an alias, the header
 # will be set to the authoritative service ID.
 #
 # For each service, multiple HTTPRoute resources are created:
@@ -44,19 +51,16 @@ kind: HTTPRoute
 metadata:
   # eg. F00C-header-route
   name: {{ $service.serviceId | lower }}-header-route
-  namespace: {{ $.Values.global.namespace }}
 
 spec:
   parentRefs:
   - kind: Gateway
     name: {{$gwname}}-envoy-gateway
-    namespace: {{ $.Values.global.namespace }}
 
   rules:
   # Determine the backend service to route to.
   - backendRefs:
     - name: {{ $.Values.global.serviceName }}
-      namespace: {{ $.Values.global.namespace }}
       port: {{ $.Values.global.port }}
 
     matches:
@@ -72,7 +76,6 @@ apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: SecurityPolicy
 metadata:
   name: {{ $service.serviceId | lower }}-header-auth-policy
-  namespace: {{ $.Values.global.namespace }}
 spec:
   targetRefs:
     - group: gateway.networking.k8s.io
@@ -94,19 +97,16 @@ kind: HTTPRoute
 metadata:
   # eg. F00C-eth-alias-header-route
   name: {{ $service.serviceId | lower }}-{{ . | lower }}-alias-header-route
-  namespace: {{ $.Values.global.namespace }}
 
 spec:
   parentRefs:
   - kind: Gateway
     name: {{$gwname}}-envoy-gateway
-    namespace: {{ $.Values.global.namespace }}
 
   rules:
   # Determine the backend service to route to.
   - backendRefs:
     - name: {{ $.Values.global.serviceName }}
-      namespace: {{ $.Values.global.namespace }}
       port: {{ $.Values.global.port }}
 
     filters:
@@ -132,7 +132,6 @@ apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: SecurityPolicy
 metadata:
   name: {{ $service.serviceId | lower }}-{{ . | lower }}-alias-header-auth-policy
-  namespace: {{ $.Values.global.namespace }}
 spec:
   targetRefs:
     - group: gateway.networking.k8s.io
