--- a/charts/guard/templates/httproute-healthz.yaml
+++ b/charts/guard/templates/httproute-healthz.yaml
@@ -1,3 +1,8 @@
+# HTTPRoute Generator for Healthz
+#
+# Generates an HTTPRoute resource for the healthz endpoint.
+#
+# Ref: https://gateway.envoyproxy.io/latest/api/gateway_api/httproute/
 {{- if .Values.guard.gateway.enabled }}
 {{- $gwname:= default "guard" $.Values.fullnameOverride }}
 apiVersion: gateway.networking.k8s.io/v1
@@ -8,7 +13,6 @@ spec:
   parentRefs:
   - kind: Gateway
     name: {{$gwname}}-envoy-gateway
-    namespace: {{ $.Values.global.namespace }}
   rules:
     - backendRefs:
         - group: ""
