--- a/charts/guard/templates/httproute-subdomain.yaml
+++ b/charts/guard/templates/httproute-subdomain.yaml
@@ -1,7 +1,9 @@
 # HTTPRoute Generator for Services
 #
-# Generates an HTTPRoute resource for each service in the `services` list, configuring routing 
+# Generates an HTTPRoute resource for each service in the `services` list, configuring routing
 # based on subdomain patterns (service ID or aliases).
+#
+# Ref: https://gateway.envoyproxy.io/latest/api/gateway_api/httproute/
 #
 # Routing behavior:
 #   - The `hostnames` field specifies which subdomains will match the request
@@ -15,9 +17,11 @@
 #       - eth-mainnet
 #
 # This configuration would match requests to:
-#   - F00C.path.grove.city
-#   - eth.path.grove.city
-#   - eth-mainnet.path.grove.city
+#   - https://<ALIAS OR SERVICE_ID>.path.grove.city/v1
+# For example:
+#   - https://F00C.path.grove.city/v1
+#   - https://eth.path.grove.city/v1
+#   - https://eth-mainnet.path.grove.city/v1
 #
 # All these requests would receive the header "target-service-id: F00C"
 {{- if and .Values.guard.services .Values.guard.gateway.enabled }}
@@ -32,20 +36,18 @@ kind: HTTPRoute
 metadata:
   # eg. F00C-subdomain-route
   name: {{ .serviceId | lower }}-subdomain-route
-  namespace: {{ $.Values.global.namespace }}
 
 spec:
   parentRefs:
   - kind: Gateway
     name: {{$gwname}}-envoy-gateway
-    namespace: {{ $.Values.global.namespace }}
 
   # Match requests based on their subdomain.
   hostnames:
-  - "{{ .serviceId | lower }}.{{ $.Values.global.domain }}"
+  - "{{ .serviceId | lower }}.{{ $.Values.guard.domain }}"
   {{- if .aliases }}
   {{- range .aliases }}
-  - "{{ . | lower }}.{{ $.Values.global.domain }}"
+  - "{{ . | lower }}.{{ $.Values.guard.domain }}"
   {{- end }}
   {{- end }}
 
@@ -53,7 +55,6 @@ spec:
   # Determine the backend service to route to.
   - backendRefs:
     - name: {{ $.Values.global.serviceName }}
-      namespace: {{ $.Values.global.namespace }}
       port: {{ $.Values.global.port }}
 
     filters:
@@ -77,7 +78,6 @@ apiVersion: gateway.envoyproxy.io/v1alpha1
 kind: SecurityPolicy
 metadata:
   name: {{ .serviceId | lower }}-subdomain-auth-policy
-  namespace: {{ $.Values.global.namespace }}
 spec:
   targetRefs:
     - group: gateway.networking.k8s.io
