--- a/charts/guard/templates/auth-grove/pads.yaml
+++ b/charts/guard/templates/auth-grove/pads.yaml
@@ -1,8 +1,9 @@
 # PATH Auth Data Server (PADS) Helm Chart
 # Used as part of the Grove legacy authorization flow.
 #
-# IMPORTANT: If your exact use-case is not authorizing requests to the
-# Grove Portal, you almost certainly have no need for this resources.
+# ######### VERY IMPORTANT #########
+# If you are not authorizing Grove Portal requests,
+# this is VERY unlikely to fit your exact use-case.
 #
 # A gRPC server that provides Gateway Endpoint data from a configurable data source
 # to the Go External Authorization Server, enabling authorization for the PATH Gateway.
