--- a/charts/guard/templates/auth-api-key/security-policy.yaml
+++ b/charts/guard/templates/auth-api-key/security-policy.yaml
@@ -9,8 +9,8 @@
 #
 # Creates a security policy for each service in the `services` list.
 #
-# The security policies ensure that requests to the service are authorized
-# through the API Key authorization flow.
+# The security policies ensure that requests to the service (e.g. eth)
+# are authorized through the API Key authorization flow.
 
 # Create a security policy for the subdomain route.
 # eg. F00C-subdomain-auth-policy
