[GUARD] Make API key default GUARD auth and remove refs to Grove Legacy (#27)
* feat: make GUARD run as dependency of PATH chart

* fix: remove need for values.yaml in local PATH

* fix: remove need for values.yaml override in PATH for guard helm char values.yaml

* fix: run GUARD as PATH dependency

* feat: moved grove legacy config to own folder and made conditional

* feat: make security policies for grove legacy auth conditional

* feat: introduce API key auth as default method

* feat: move default guard values to path chart

* chore: improve descriptions for guard field names

* chore: improve descriptions for guard field names

* chore: improve descriptions for guard field names

* chore: use api keys array instead of object

* chore: improve descriptions for guard field names

* chore: improve descriptions for guard field names

* Use WATCH chart in PATH chart

* fix: ensure groveLegacy has zero value in guard values.yaml

* chore: remove local guard dep repository field

* Review all the docs

* Update TOC

* Apply suggestions from code review

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>

* fix: implement review comments

* fix: implement review comments

* fix: remove gateway.enabled field from guard values.yaml

* fix: remove gateway.enabled field from guard values.yaml

* fix: implement review comments

* fix: implement review comments

---------

Co-authored-by: Arash Deshmeh <adshmh@gmail.com>
Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Hebert_Cuellar <hebert.cuellar@gmail.com>

--- a/charts/guard/templates/routing/httproute-subdomain.yaml
+++ b/charts/guard/templates/routing/httproute-subdomain.yaml
@@ -24,11 +24,10 @@
 #   - https://eth-mainnet.path.grove.city/v1
 #
 # All these requests would receive the header "target-service-id: F00C"
-{{- if and .Values.guard.services .Values.guard.gateway.enabled }}
 {{- $gwname:= default "guard" $.Values.fullnameOverride }}
 {{- $name:= include "guard-helm.fullname" . }}
 
-{{- range .Values.guard.services }}
+{{- range .Values.services }}
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -44,10 +43,10 @@ spec:
 
   # Match requests based on their subdomain.
   hostnames:
-  - "{{ .serviceId | lower }}.{{ $.Values.guard.domain }}"
+  - "{{ .serviceId | lower }}.{{ $.Values.domain }}"
   {{- if .aliases }}
   {{- range .aliases }}
-  - "{{ . | lower }}.{{ $.Values.guard.domain }}"
+  - "{{ . | lower }}.{{ $.Values.domain }}"
   {{- end }}
   {{- end }}
 
@@ -70,26 +69,5 @@ spec:
     - path:
         type: PathPrefix
         value: /v1
-
-# TODO_MVP(@commoddity): Modify this config to use TLS for
-# the connection to the external authorization server.
----
-apiVersion: gateway.envoyproxy.io/v1alpha1
-kind: SecurityPolicy
-metadata:
-  name: {{ .serviceId | lower }}-subdomain-auth-policy
-spec:
-  targetRefs:
-    - group: gateway.networking.k8s.io
-      kind: HTTPRoute
-      # eg. F00C-subdomain-route - matches the HTTPRoute resource created above
-      name: {{ .serviceId | lower }}-subdomain-route
-  extAuth:
-    grpc:
-      backendRefs:
-        - name: {{$name}}-auth-server
-          port: 10001
-
-{{- end }}
 
 {{- end }}
