--- a/charts/guard/templates/auth-grove/peas.yaml
+++ b/charts/guard/templates/auth-grove/peas.yaml
@@ -1,30 +1,40 @@
-# External Authorization Server Helm Chart
+# PATH External Authorization Server (PEAS) Helm Chart
+# Used as part of the Grove legacy authorization flow.
+#
+# ######### VERY IMPORTANT #########
+# If you are not authorizing Grove Portal requests,
+# this is VERY unlikely to fit your exact use-case.
 #
 # An external authorization server designed to authorize requests to the PATH Gateway.
-# 
+# This exists due to unique needs for authorizing Portal Apps in the Grove Portal that
+# could not be handled by out-of-the-box Envoy Gateway functionality, hence the need for
+# a custom authorization server implementation.
+#
+#
 # Key characteristics:
 #   - Uses gRPC for communication
 #   - Adheres to the specification expected by the Envoy External Authorization HTTP Filter
 # Reference: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/ext_authz_filter
 # Github Repo: https://github.com/buildwithgrove/path-external-auth-server
 #
-{{- if .Values.authServer.enabled }}
+{{- if .Values.auth.groveLegacy.enabled }}
 {{- $name:= include "guard-helm.fullname" . }}
+{{- $peasConfig:= .Values.auth.groveLegacy.peas }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{$name}}-auth-server
+  name: {{$name}}-peas
 spec:
-  replicas: {{ .Values.authServer.replicas }}
+  replicas: {{ $peasConfig.replicas }}
   selector:
     matchLabels:
-      app: {{$name}}-auth-server
+      app: {{$name}}-peas
   template:
     metadata:
       labels:
         {{- include "guard-helm.labels" $ | nindent 8 }}
-        app: {{$name}}-auth-server
+        app: {{$name}}-peas
     spec:
       # Use an init container to wait for the PADS server to be ready.
       initContainers:
@@ -35,20 +45,20 @@ spec:
       - name: path-external-auth-server
         image: ghcr.io/buildwithgrove/path-external-auth-server:latest
         imagePullPolicy: IfNotPresent
-        env: {{- toYaml .Values.authServer.env | nindent 10 }}
+        env: {{- toYaml $peasConfig.env | nindent 10 }}
         ports:
-        - containerPort: {{ .Values.authServer.port }}
+        - containerPort: {{ $peasConfig.port }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{$name}}-auth-server
+  name: {{$name}}-peas
 spec:
   selector:
-    app: {{$name}}-auth-server
+    app: {{$name}}-peas
   ports:
-  - port: {{ .Values.authServer.port }}
-    targetPort: {{ .Values.authServer.port }}
+  - port: {{ $peasConfig.port }}
+    targetPort: {{ $peasConfig.port }}
     protocol: TCP
     name: grpc
 
