--- a/charts/guard/templates/envoy-gateway.yaml
+++ b/charts/guard/templates/envoy-gateway.yaml
@@ -1,6 +1,5 @@
 # This resources configures the Envoy Gateway for GUARD.
 # Ref: https://gateway.envoyproxy.io/latest/api/gateway_api/gateway/
-{{- if .Values.guard.gateway.enabled }}
 {{- $gwname:= default "guard" $.Values.fullnameOverride }}
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
@@ -13,7 +12,7 @@ spec:
   listeners:
     - name: http
       protocol: HTTP
-      port: {{ $.Values.guard.gateway.port }}
+      port: {{ $.Values.gateway.port }}
       allowedRoutes:
         kinds:
         - kind: HTTPRoute
@@ -28,4 +27,3 @@ metadata:
 spec:
   controllerName: gateway.envoyproxy.io/gatewayclass-controller
 
-{{- end }}
